# src/app.ts
@@ -1,10 +1,24 @@
 import express from 'express'
+import PublicRoutes from './routes/publicRoutes'
+import cors from 'cors';
 
+const {
+  BASE_URL_DOC,
+} = process.env;
 
 const app = express();
 
-app.get('/users', (req, res) => {
-  res.json({ id: 32, name: "Gilmar Cintra", email: "teste@gmail.com", password: "lkkljdksjkdj545454kjds", created: "1999-12-31T23:59:59Z", updated: "1999-12-31T23:59:59Z", active: true });
-})
+//Utilizado para devolver a resposta em Json
+app.use(express.urlencoded({ extended: true }));
+app.use(express.json());
+
+app.use(
+  cors({
+    credentials: true,
+    origin: BASE_URL_DOC,
+  }),
+);
+
+app.use(PublicRoutes);
 
 export default app;
