# types.ts
@@ -1,0 +1,5 @@
+export interface UserCreateFormData {
+  name: string;
+  email: string;
+  password: string;
+}
